add Dtos & fix maven issues